Update website Sep 3rd 2022

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 Email: a2bhatt at ucsd dot edu<br /></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a PhD candidate in the department of Electrical and Computer Engineering at UC San Diego, advised by <a href="http://yhk.ucsd.edu">Prof. Young-Han Kim</a>. My research interests lie broadly at the intersection of information theory and statistics. </p>
+<p>I am currently a postdoc at <a href="http://simons.berkeley.edu">Simons Institute for the Theory of Computing,</a> UC Berkeley. I recieved my PhD in Electrical Engineering from  UC San Diego, advised by <a href="http://yhk.ucsd.edu">Prof. Young-Han Kim</a>. My research interests lie broadly at the intersection of information theory and statistics. </p>
 <h2>Education</h2>
 <ul>
-<li><p>Ph.D. in <a href="http://ece.ucsd.edu">Electrical and Computer Engineering</a>, <a href="http://ucsd.edu">UC San Diego</a>, Aug. 2016 - present</p>
+<li><p>Ph.D. in <a href="http://ece.ucsd.edu">Electrical Engineering</a>, <a href="http://ucsd.edu">UC San Diego</a>, Aug. 2016 - July 2022</p>
 </li>
 <li><p>M.S. in <a href="http://math.ucsd.edu">Statistics</a>, UC San Diego, December 2020</p>
 </li>
