--- a/papers.html
+++ b/papers.html
@@ -19,63 +19,74 @@
 <div id="toptitle">
 <h1>Publications</h1>
 </div>
-<h2>Full Papers</h2>
 <ul>
-<li><p>Sharp Concentration Inequalities for the Centered Relative Entropy<br /> 
+<li><p><a href="https://arxiv.org/abs/2207.12382">On Confidence Sequences for Bounded Random Processes via Universal Gambling Strategies</a><br />
+with J. Jon Ryu </p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2202.02431">On Universal Portfolios with Continuous Side Information</a><br />
+with J. Jon Ryu and Young-Han Kim </p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2202.02406">Parameter-free Online Linear Optimization with Side Information via Universal Coin Betting</a><br />
+with J. Jon Ryu and Young-Han Kim </p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2109.09028">Sharp Concentration Inequalities for the Centered Relative Entropy</a><br /> 
 with Ankit Pensia<br />
-<a href="https://arxiv.org/abs/2109.09028">arXiv:2109.09028</a></p>
+Information and Inference: A Journal of the IMA, 2022 </p>
 </li>
 </ul>
 <ul>
-<li><p>Sequential prediction under log-loss with side information<br />
+<li><p><a href="https://arxiv.org/abs/2102.06855">Sequential prediction under log-loss with side information</a><br />
 with Young-Han Kim<br />
-Algorithmic Learning Theory, 2021<br />
-<a href="https://arxiv.org/abs/2102.06855">pdf</a></p>
+Algorithmic Learning Theory, 2021</p>
 </li>
 </ul>
 <ul>
-<li><p>Universal Graph Compression: Stochastic Block Models<br />
+<li><p><a href="https://arxiv.org/abs/2006.02643">Universal Graph Compression: Stochastic Block Models</a><br />
 with Ziao Wang, Chi Wang and Lele Wang<br />
-Full version <a href="https://arxiv.org/abs/2006.02643">arXiv:2006.02643</a> submitted<br />
-Short version at International Symposium of Information Theory (ISIT) 2021</p>
+Full version submitted<br />
+Short version at International Symposium on Information Theory (ISIT) 2021</p>
 </li>
 </ul>
 <ul>
-<li><p>Information Distilling Quantizers<br />
+<li><p><a href="https://arxiv.org/abs/1812.03031">Information Distilling Quantizers</a><br />
 with Bobak Nazer, Or Ordentlich and Yury Polyanskiy<br />
-IEEE Trans. Inf. Theory, vol. 67, no. 4, pp. 2472&ndash;2487<br />
-<a href="https://arxiv.org/pdf/1812.03031.pdf">pdf</a></p>
+IEEE Trans. Inf. Theory, vol. 67, no. 4, pp. 2472&ndash;2487</p>
 </li>
 </ul>
-<h2>Conference Papers</h2>
 <ul>
-<li><p>An Efficient Method to Monitor Downlink Traffic for 4G and 5G Networks<br />
+<li><p><a href="files/papers/5GGlobecom.pdf">An Efficient Method to Monitor Downlink Traffic for 4G and 5G Networks</a><br />
 with Tae-Won Ban and Young-Han Kim<br />
-2019 IEEE Global Communications Conference (GLOBECOM) <a href="files/papers/5GGlobecom.pdf">pdf</a></p>
+2019 IEEE Global Communications Conference (GLOBECOM) </p>
 </li>
 </ul>
 <ul>
-<li><p>Variations on a Theme by Liu, Cuff, and Verdu:
-The Power of Posterior Sampling<br />
+<li><p><a href="files/papers/CuffsLemmaITW.pdf">Variations on a Theme by Liu, Cuff, and Verdu:
+The Power of Posterior Sampling</a><br />
 with Jiun-Ting Huang, Young-Han Kim, J. Jon Ryu and Pinar Sen<br />
-2018 IEEE Information Theory Workshop (ITW) <a href="files/papers/CuffsLemmaITW.pdf">pdf</a></p>
+2018 IEEE Information Theory Workshop (ITW) </p>
 </li>
 </ul>
 <ul>
-<li><p>Monte Carlo Methods for Randomized Likelihood Decoding<br />
+<li><p><a href="files/papers/MCMCAllerton.pdf">Monte Carlo Methods for Randomized Likelihood Decoding</a><br />
 with Jiun-Ting Huang, Young-Han Kim, J. Jon Ryu and Pinar Sen<br />
-2018 56th Annual Allerton Conference on Communication, Control, and Computing (Allerton) <a href="files/papers/MCMCAllerton.pdf">pdf</a></p>
+2018 56th Annual Allerton Conference on Communication, Control, and Computing (Allerton) </p>
 </li>
 </ul>
 <ul>
-<li><p>Polar coding for multiple descriptions using monotone chain rules<br />
+<li><p><a href="files/papers/PolarCodingAllerton.pdf">Polar coding for multiple descriptions using monotone chain rules</a><br />
 with Nadim Ghaddar and Lele Wang<br />
-2017 55th Annual Allerton Conference on Communication, Control, and Computing (Allerton) <a href="files/papers/PolarCodingAllerton.pdf">pdf</a> </p>
+2017 55th Annual Allerton Conference on Communication, Control, and Computing (Allerton) </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-11-01 13:16:22 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-03 16:40:50 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
