--- a/papers.html
+++ b/papers.html
@@ -20,18 +20,25 @@
 <h1>Publications</h1>
 </div>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2303.04845">Smoothed Analysis of Sequential Probability Assignment</a><br />
+with Nika Haghtalab and Abhishek Shetty</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2207.12382">On Confidence Sequences for Bounded Random Processes via Universal Gambling Strategies</a><br />
 with J. Jon Ryu </p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2202.02431">On Universal Portfolios with Continuous Side Information</a><br />
-with J. Jon Ryu and Young-Han Kim </p>
+with J. Jon Ryu and Young-Han Kim <br />
+AISTATS 2023</p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2202.02406">Parameter-free Online Linear Optimization with Side Information via Universal Coin Betting</a><br />
-with J. Jon Ryu and Young-Han Kim </p>
+with J. Jon Ryu and Young-Han Kim<br />
+AISTATS 2022 </p>
 </li>
 </ul>
 <ul>
@@ -86,7 +93,7 @@ with Nadim Ghaddar and Lele Wang<br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-03 16:40:50 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-24 12:26:16 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
