--- a/papers.html
+++ b/papers.html
@@ -19,14 +19,42 @@
 <div id="toptitle">
 <h1>Publications</h1>
 </div>
+<h2>Journal Papers and Preprints</h2>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2303.04845">Smoothed Analysis of Sequential Probability Assignment</a><br />
-with Nika Haghtalab and Abhishek Shetty</p>
+<li><p><a href="https://arxiv.org/abs/2207.12382">On Confidence Sequences for Bounded Random Processes via Universal Gambling Strategies</a><br />
+with J. Jon Ryu <br />
+Submitted</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2207.12382">On Confidence Sequences for Bounded Random Processes via Universal Gambling Strategies</a><br />
-with J. Jon Ryu </p>
+<li><p><a href="https://arxiv.org/abs/2006.02643">Universal Graph Compression: Stochastic Block Models</a><br />
+with Ziao Wang, Chi Wang and Lele Wang<br />
+IEEE Transactions on Information Theory, to appear<br />
+Short version at International Symposium on Information Theory (ISIT) 2021</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2109.09028">Sharp Concentration Inequalities for the Centered Relative Entropy</a><br />
+with Ankit Pensia<br />
+Information and Inference: A Journal of the IMA, 2022</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/1812.03031">Information Distilling Quantizers</a><br />
+with Bobak Nazer, Or Ordentlich and Yury Polyanskiy<br />
+IEEE Trans. Inf. Theory, vol. 67, no. 4, pp. 2472&ndash;2487</p>
+</li>
+</ul>
+<h2>Conference Papers (not subsumed by journal versions)</h2>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2303.04845">Smoothed Analysis of Sequential Probability Assignment</a><br />
+with Nika Haghtalab and Abhishek Shetty<br />
+NeurIPS 2023 Spotlight</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="files/papers/ISIT23.pdf">Universal prediction of m-ary sequences</a><br />
+ISIT 2023</p>
 </li>
 </ul>
 <ul>
@@ -38,32 +66,13 @@ AISTATS 2023</p>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2202.02406">Parameter-free Online Linear Optimization with Side Information via Universal Coin Betting</a><br />
 with J. Jon Ryu and Young-Han Kim<br />
-AISTATS 2022 </p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2109.09028">Sharp Concentration Inequalities for the Centered Relative Entropy</a><br /> 
-with Ankit Pensia<br />
-Information and Inference: A Journal of the IMA, 2022 </p>
+AISTATS 2022</p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2102.06855">Sequential prediction under log-loss with side information</a><br />
 with Young-Han Kim<br />
 Algorithmic Learning Theory, 2021</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2006.02643">Universal Graph Compression: Stochastic Block Models</a><br />
-with Ziao Wang, Chi Wang and Lele Wang<br />
-Full version submitted<br />
-Short version at International Symposium on Information Theory (ISIT) 2021</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/1812.03031">Information Distilling Quantizers</a><br />
-with Bobak Nazer, Or Ordentlich and Yury Polyanskiy<br />
-IEEE Trans. Inf. Theory, vol. 67, no. 4, pp. 2472&ndash;2487</p>
 </li>
 </ul>
 <ul>
@@ -93,7 +102,7 @@ with Nadim Ghaddar and Lele Wang<br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-24 12:26:16 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-26 20:24:48 MST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
