--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 Email: abhatt at caltech dot edu<br /></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>Since January 2023, I am a postdoc in the <a href="http://cms.caltech.edu">CMS department</a> at Caltech. In Fall 2022 I was a research fellow at <a href="http://simons.berkeley.edu">Simons Institute for the Theory of Computing,</a> UC Berkeley. I recieved my PhD in Electrical Engineering from  UC San Diego, advised by <a href="http://yhk.ucsd.edu">Prof. Young-Han Kim</a>. My research interests lie broadly at the intersection of information theory and statistics. </p>
+<p>Since January 2023, I am a postdoc in the <a href="http://cms.caltech.edu">CMS department</a> at Caltech. In Fall 2022 I was a research fellow at <a href="http://simons.berkeley.edu">Simons Institute for the Theory of Computing,</a> UC Berkeley. I recieved my PhD in Electrical Engineering from  UC San Diego, advised by <a href="http://yhk.ucsd.edu">Prof. Young-Han Kim</a>. My research interests lie broadly at the intersection of information theory and statistics, with a recent focus on sequential decision making. </p>
 <h2>Education</h2>
 <ul>
 <li><p>Ph.D. in <a href="http://ece.ucsd.edu">Electrical Engineering</a>, <a href="http://ucsd.edu">UC San Diego</a>, Aug. 2016 - July 2022</p>
