--- a/papers.html
+++ b/papers.html
@@ -21,28 +21,34 @@
 </div>
 <h2>Journal Papers and Preprints</h2>
 <ul>
+<li><p>The SMART Approach to Instance-optimal Online Learning<br />
+with Siddhartha Banerjee and Christina Lee Yu <br />
+Working paper, 2023</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2207.12382">On Confidence Sequences for Bounded Random Processes via Universal Gambling Strategies</a><br />
 with J. Jon Ryu <br />
-Submitted</p>
+Under revision at IEEE Transactions on Information Theory, 2023</p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2006.02643">Universal Graph Compression: Stochastic Block Models</a><br />
 with Ziao Wang, Chi Wang and Lele Wang<br />
-IEEE Transactions on Information Theory, to appear<br />
+IEEE Transactions on Information Theory, to appear, 2023+ <br />
 Short version at International Symposium on Information Theory (ISIT) 2021</p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2109.09028">Sharp Concentration Inequalities for the Centered Relative Entropy</a><br />
 with Ankit Pensia<br />
-Information and Inference: A Journal of the IMA, 2022</p>
+Information and Inference: A Journal of the IMA, Volume 12, Issue 1, 2023</p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/1812.03031">Information Distilling Quantizers</a><br />
 with Bobak Nazer, Or Ordentlich and Yury Polyanskiy<br />
-IEEE Trans. Inf. Theory, vol. 67, no. 4, pp. 2472&ndash;2487</p>
+IEEE Transactions on Information Theory, Volume 67 No.4, 2021</p>
 </li>
 </ul>
 <h2>Conference Papers (not subsumed by journal versions)</h2>
@@ -102,7 +108,7 @@ with Nadim Ghaddar and Lele Wang<br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-26 20:24:48 MST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-12-03 21:42:14 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
