updated papers list

--- a/papers.html
+++ b/papers.html
@@ -21,21 +21,29 @@
 </div>
 <h2>Journal Papers and Preprints</h2>
 <ul>
-<li><p>The SMART Approach to Instance-optimal Online Learning<br />
+<li><p> Prediction with noisy expert advice <br />
+with Victoria Kostina <br />
+Submitted, 2024 <br />
+Short version in International Symposium on Information Theory (ISIT) 2024</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2402.17720">The SMART Approach to Instance-optimal Online Learning</a><br />
 with Siddhartha Banerjee and Christina Lee Yu <br />
-Working paper, 2023</p>
+Submitted, 2024 <br />
+Short version in Conference on Learning Theory (COLT) 2024</p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2207.12382">On Confidence Sequences for Bounded Random Processes via Universal Gambling Strategies</a><br />
 with J. Jon Ryu <br />
-Under revision at IEEE Transactions on Information Theory, 2023</p>
+IEEE Transactions on Information Theory, 2024</p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2006.02643">Universal Graph Compression: Stochastic Block Models</a><br />
 with Ziao Wang, Chi Wang and Lele Wang<br />
-IEEE Transactions on Information Theory, to appear, 2023+ <br />
+IEEE Transactions on Information Theory, 2024 <br />
 Short version at International Symposium on Information Theory (ISIT) 2021</p>
 </li>
 </ul>
