Added PDF to Victoria paper.

--- a/papers.html
+++ b/papers.html
@@ -21,7 +21,7 @@
 </div>
 <h2>Journal Papers and Preprints</h2>
 <ul>
-<li><p> Prediction with noisy expert advice <br />
+<li><p><a href="files/papers/NoisyExperts.pdf"> Prediction with noisy expert advice </a><br />
 with Victoria Kostina <br />
 Submitted, 2024 <br />
 Short version in International Symposium on Information Theory (ISIT) 2024</p>
